# OptimisationCryptanalysis

./: Makefile.am  README.md  analytics.py  configure.ac  genetic.py  greedy.py  message.txt  message2.txt  message4.txt  rsa_spo.py  test.txt  test2.txt  test3.txt  test4.txt  test5.txt
CPP/: GACO.cpp  Makefile
CPP/src/: aes.cpp  analysis.cpp  cryptanalysis.cpp  des.cpp  manual_des.cpp  playfair.cpp  rsa.cpp  substitution.cpp  tests.cpp  vigenere.cpp
CPP/src/.deps/: NullGenerator.Po  aes.Po  analysis.Po  cryptanalysis.Po  des.Po  nullgenerator.Po  playfair.Po  rsa.Po  speck.Po  substitution.Po  tests.Po  vigenere.Po
CPP/src/ciphers/: aes.cpp  columnar.cpp  des.cpp  playfair.cpp  rail_fence.cpp  rsa.cpp  speck.cpp  substitution.cpp  vigenere.cpp
CPP/src/ciphers/.deps/: aes.Po  des.Po  playfair.Po  rsa.Po  (+3 more)
CPP/src/helpers/: NullGenerator.cpp  NullGenerator.h  analysis.cpp  crypto_functions.h  cuckoo_search.cpp  cuckoo_search.hpp  custom_sga.cpp  custom_sga.hpp  digrams.hpp  hexifier.cpp  keychecker.cpp  log_extractor.cpp  monograms.hpp  notused.cpp  optimization_problems.h  trigrams.hpp
Python/: analytics.py  fitness_landscape.py  greedy.py  ngrams.py  rsa_spo.py
Tests/: JulesVerne1_plaintext.txt  JulesVerne1_plaintext_stripped.txt
Tests/aes/: JulesVerne1_aes.txt
Tests/caesar/: caesar.txt
Tests/columnar/: JulesVerne1.txt
Tests/des/: JulesVerne1_des.txt
Tests/msub/: JulesVerne3.txt
Tests/playfair/: JulesVerne.txt  JulesVerne1.txt
Tests/rsa/: rsa_factor_seasy.txt  rsa_factor_test.txt  rsa_test.txt
Tests/rsa_rutkowski_houghten/: rsa10_16d_53b.txt  rsa11_17d_54b.txt  rsa12_18d_58b.txt  rsa13_19d_61b.txt  rsa14_20d_65b.txt  rsa15_21d_69b.txt  rsa16_22d_72b.txt  rsa1_8d_24b.txt  rsa2_8d_25b.txt  rsa3_9d_29b.txt  rsa4_10d_33b.txt  rsa5_11d_36b.txt  rsa6_12d_38b.txt  rsa7_14d_44b.txt  rsa8_14d_46b.txt  rsa9_15d_47b.txt
Tests/simon/: JulesVerne1_simon.txt
Tests/simple_substitutions/: caesar.txt  testTrainOfThought.txt
Tests/vigenere/: JulesVerne1_Vigenere_key3.txt  JulesVerne1_key10.txt  JulesVerne1_key5.txt
(+3 files in other folders)
